--- a/css/styles.css
+++ b/css/styles.css
@@ -268,6 +268,7 @@ h2{
     left: 50%;
     transform: translate(-50%, -50%);
 
+    padding: 40px;
     width: 528px;
     height: 581px;
     background: #FFFFFF;
@@ -301,7 +302,7 @@ h2{
 
 
 .form{
-    padding: 40px 39px 40px 41px;
+    
 }
 
 .form h2{
@@ -325,6 +326,8 @@ h2{
 
 
 .form-field span{
+    display: block;
+
     margin-bottom: 4px;
 
     font-family: 'Roboto';
@@ -384,12 +387,28 @@ h2{
 
 .form-label{
     margin-bottom: 4px;
-    display: inline-block;
+    display: block;
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.1;
+    
+
+    letter-spacing: 0.01em;
+
+    color: #757575;
 }
 
 
+.form-field-wrap{
+    display: block;
+    margin-bottom: 20px;
+}
 
-.form-field textarea{
+.form-field-wrap textarea{
+    display: block;
     width: 100%;
     height: 120px;
     border: 1px solid rgba(33, 33, 33, 0.2);
@@ -397,12 +416,11 @@ h2{
     resize: none;
     padding: 12px 16px;
     outline: none;
-    margin-bottom: 10px;
 
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-field textarea::placeholder{
+.form-field-wrap::placeholder{
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
@@ -412,11 +430,10 @@ h2{
 
     color: rgba(117, 117, 117, 0.5);
 
-    
-
 }
 
-.form-field textarea:hover, .form-field textarea:focus {
+.form-field-wrap textarea:hover, 
+.form-field-wrap textarea:focus {
     border-color: #2196F3;
 }
 
@@ -440,6 +457,7 @@ h2{
     clip-path: inset(100%);
     clip: rect(0, 0, 0, 0);
     overflow: hidden;
+    opacity: 1;
 
     
 }
@@ -450,7 +468,7 @@ h2{
 }
 
 .checkbox-square{
-    width: 16px;
+    width: 15px;
     height: 15px;
     margin-right: 7px;
     border: 2px solid #212121;
@@ -903,7 +921,7 @@ h2{
 
     padding-left: 16px;
     outline: none;
-    cursor: pointer;
+    
 }
 
 .footer-form-input::placeholder{
